# sot-expression-graph

./: .gitignore  CMakeLists.txt  README.md
python/: CMakeLists.txt  pouring_task_one_arm.py  test_angles_btw_plane_and_versor.py  test_angles_btw_planes.py  test_distance.py  test_exp_graph.py  test_exp_graph_full.py  test_exp_graph_one_frame_fixed.py  test_line_to_line_distance.py  test_point-toward_angle.py  test_point_to_line_distance.py  test_point_to_line_prj.py  test_point_to_point.py  test_point_to_point_fixed.py  test_surface.py  test_versor_to_versor_angle.py
src/: CMakeLists.txt  feature-angle-btw-plane-versor.cpp  feature-angle-btw-plane-versor.h  feature-angle-btw-planes.cpp  feature-angle-btw-planes.h  feature-expr-graph-abstract.cpp  feature-expr-graph-abstract.h  feature-expressionFullGraph.cpp  feature-expressionFullGraph.h  feature-expressionGraph.cpp  feature-expressionGraph.h  feature-line-to-line-distance.cpp  feature-line-to-line-distance.h  feature-plane-to-plane-angle.cpp  feature-plane-to-plane-angle.h  feature-plane-to-versor-angle.cpp  feature-plane-to-versor-angle.h  feature-point-to-line-distance.cpp  feature-point-to-line-distance.h  feature-point-to-line-projection.cpp  feature-point-to-line-projection.h  feature-point-to-point-distance.cpp  feature-point-to-point-distance.h  feature-point-to-point.cpp  feature-point-to-point.h  feature-point-to-surface-distance.cpp  feature-point-to-surface-distance.h  feature-point-to-surface.cpp  feature-point-to-surface.h  feature-point-toward-angle.cpp  feature-point-toward-angle.h  feature-versor-to-versor-angle.cpp  feature-versor-to-versor-angle.h  helper.cpp  helper.h  helper.t.cpp  romeo.h
src/dynamic_graph/sot/expression_graph/: functions.py  types.py
